<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_validate">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- PropertyEntity Fields -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_property_selling_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5sp"
                android:text="@string/pick_date_of_selling"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/property_date_start_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textSize="15sp"
                android:text="@string/selling_date" />

        </LinearLayout>

            <EditText
                android:id="@+id/property_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/property_price" />

            <EditText
                android:id="@+id/property_square_feet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/property_square_feet" />

            <EditText
                android:id="@+id/property_rooms_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/property_rooms_count" />

            <EditText
                android:id="@+id/property_bedrooms_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/property_bedrooms_count" />

            <EditText
                android:id="@+id/property_bathrooms_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/property_bathrooms_count" />

            <EditText
                android:id="@+id/property_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/property_description" />

            <EditText
                android:id="@+id/property_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/property_type" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proximity" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/property_switch_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_marginStart="100dp"
                android:text="@string/school"
                android:textSize="18sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/property_switch_park"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_marginStart="100dp"
                android:text="@string/park"
                android:textSize="18sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/property_switch_shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_marginStart="100dp"
                android:text="@string/shopping"
                android:textSize="18sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/property_switch_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_marginStart="100dp"
                android:text="@string/restaurant"
                android:textSize="18sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/property_switch_public_transport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_marginStart="100dp"
                android:text="@string/public_transport"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/paleGray"/>






            <!-- Continue with other fields like squareFeet, roomsCount, etc. -->

            <!-- AgentEntity Fields -->
            <EditText
                android:id="@+id/agent_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/agent_email"/>

            <!-- Continue with other fields like lastName, email, etc. -->

            <!-- PhotoEntity Fields -->
            <EditText
                android:id="@+id/photo_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/photo_description"/>

            <!-- AddressEntity Fields -->
            <EditText
                android:id="@+id/edtStreetNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street_number" />

            <!-- Continue with other fields like streetName, city, etc. -->

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel_add_property"
        app:layout_constraintEnd_toStartOf="@+id/btn_validate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_validate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/validate_add_property"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
