<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/nav_take_photo"
        android:icon="@drawable/ic_photo_camera_white_24dp"
        android:title="@string/take_photo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout_white_24dp"
        android:title="@string/logout"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_login_white_24dp"
        android:title="@string/login"
        app:showAsAction="ifRoom" />
</menu>